--- a/index.html
+++ b/index.html
@@ -166,11 +166,17 @@
 
             <div class="mt-8 grid grid-cols-4 gap-2 px-4">
                 <div class="bg-white border rounded p-2 flex items-center justify-center">
-                    <a href="https://ibb.co/BV4C12Zj"><img src="https://i.ibb.co/sv5VB9wQ/88347052-D6-A4-4974-A56-C-FCAD68185365.png" alt="88347052-D6-A4-4974-A56-C-FCAD68185365" border="0" class="h-7"></a>
+                    <a href="https://ibb.co/BV4C12Zj"><img src="https://i.ibb.co/sv5VB9wQ/88347052-D6-A4-4974-A56-C-FCAD68185365.png" alt="88347052-D6-A4-4974-A56-C-FCAD68185365" border="0" class="h-6"></a>
                 </div>
-                <div class="bg-white border rounded p-2 flex items-center justify-center"><img src="https://i.ibb.co/sv5VB9wQ/88347052-D6-A4-4974-A56-C-FCAD68185365.png" class="h-7"></div>
-                <div class="bg-white border rounded p-2 flex items-center justify-center"><img src="https://i.ibb.co/fG2CKyhR/E01-BB971-3-E72-498-A-BEAA-004-A9098-EC7-A.png" class="h-6"></div>
-                <div class="bg-white border rounded p-2 flex items-center justify-center"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/Apple_Pay_logo.svg" class="h-6"></div>
+                <div class="bg-white border rounded p-2 flex items-center justify-center">
+                    <a href="https://ibb.co/4g7jDX6y"><img src="https://i.ibb.co/fG2CKyhR/E01-BB971-3-E72-498-A-BEAA-004-A9098-EC7-A.png" alt="E01-BB971-3-E72-498-A-BEAA-004-A9098-EC7-A" border="0" class="h-6"></a>
+                </div>
+                <div class="bg-white border rounded p-2 flex items-center justify-center">
+                    <img src="https://i.ibb.co/fG2CKyhR/E01-BB971-3-E72-498-A-BEAA-004-A9098-EC7-A.png" class="h-6">
+                </div>
+                <div class="bg-white border rounded p-2 flex items-center justify-center">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/Apple_Pay_logo.svg" class="h-6">
+                </div>
             </div>
         </main>
     </section>
